# pai-landing-page

./: .gitignore  .prettierignore  .prettierrc  README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: build_projects.yml  validate_projects.yml
app/: globals.css  layout.tsx  page.tsx
app/(home)/: page.tsx
app/(home)/_components/: animated-stats.tsx  expanding-cover.tsx  partner-marquee.tsx  scroll-values.tsx
app/_components/: button-link.tsx  container.tsx  cover-image.tsx  cta-banner.tsx  footer.tsx  header.tsx  hero.tsx  page-layout.tsx  partners.tsx  scroll-reveal.tsx  section-heading.tsx  services.tsx  values.tsx
app/_lib/: motion.ts  navigation.ts
app/about/: page.tsx
app/blog/: page.tsx
app/blog/[slug]/: page.tsx
app/careers/: page.tsx
app/careers/[slug]/: page.tsx
app/culture/: page.tsx
app/services/: page.tsx
content/blog/: rag-introduction.mdx
content/careers/: ai-engineer.mdx  frontend-engineer.mdx
lib/: content.ts
project/: Dockerfile  README.md  pyproject.toml
project/tests/integration/: test_sample.py
project/webapp/: app.py
project/webapp/routers/: base.py
public/images/culture/: cover.avif  way-01.avif  way-02.avif  way-03.avif
public/images/services/: aimp.avif
